--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "weectrl"
-version = "0.5.1"
+version = "0.9.0"
 authors = ["Klaus Nielsen <hyperchaotic@gmail.com>"]
 license = "MIT/Apache-2.0"
 readme = "README.md"
@@ -9,36 +9,34 @@ repository = "https://github.com/Hyperchaotic/weectrl"
 homepage = "https://github.com/Hyperchaotic/weectrl"
 description = "A library and application for controlling WeMo switches."
 categories = ["Network Programming"]
+edition = "2021"
+
 
 [dependencies]
-slog = "1.4.1"
-slog-scope = "0.2.2"
-slog-stdlog = "1.1.0"
-slog-stream = "1.2.0"
 
-chrono = "0.3.1"
-ssdp = "0.6.0"
-time = "0.1"
-#hyper = "0.10.0"
-serde = "0.8.22"
-serde_xml = "0.9.1"
-serde_json = "0.8"
-serde_derive = "0.8.22"
-app_dirs = "1.1.1"
-url = "1.2.4"
-tokio-core = "0.1.4"
-tokio-timer = "0.1.0"
-futures = "0.1.10"
+tracing = "0.1"
+tracing-subscriber = "0.3"
+directories = "4"
 
-[dependencies.hyper]
-git = "https://github.com/hyperium/hyper.git"
+mime = "0.3.16"
+serde-xml-rs = "0.5.1"
+serde_json = "1.0"
+serde_derive = "1.0"
+serde = { version = "1.0", features = ["derive"] }
+url = "2"
+reqwest = { version = "0.11", features = ["blocking"] }
+
+
+[profile.release]
+strip = true
+opt-level = "z"
+lto = true
+codegen-units = 1
+panic = "abort"
 
 [dev-dependencies]
-image = "0.12.2"
-
-[dev-dependencies.conrod]
-git = "https://github.com/PistonDevelopers/conrod.git"
-features = ["glium", "winit"]
+fltk = "1"
+fltk-theme = "0.4"
 
 [lib]
 name = "weectrl"
