--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ edition = "2021"
 [dependencies]
 
 tracing = "0.1"
-tracing-subscriber = "0.3"
+tracing-subscriber = { version = "0.3", features = ["local-time"] }
 directories = "4"
 
 mime = "0.3.16"
@@ -26,21 +26,17 @@ serde = { version = "1.0", features = ["derive"] }
 url = "2"
 reqwest = { version = "0.11", features = ["blocking"] }
 
-
 [profile.release]
 strip = true
-opt-level = "z"
+opt-level = "s"
 lto = true
 codegen-units = 1
 panic = "abort"
 
-[dev-dependencies]
+[dev-dependencies] 
 fltk = "1"
 fltk-theme = "0.4"
 
 [lib]
 name = "weectrl"
 path = "src/lib.rs"
-
-[features]
-nightly = []
