--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ edition = "2021"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["local-time"] }
 directories = "4"
-
+futures = "0.3"
 mime = "0.3.16"
 serde-xml-rs = "0.5.1"
 serde_json = "1.0"
@@ -33,6 +33,7 @@ codegen-units = 1
 panic = "abort"
 
 [dev-dependencies] 
+advmac = "1"
 fltk = "1"
 fltk-theme = "0.4"
 
