--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,8 @@ serde_derive = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 url = "2"
 reqwest = { version = "0.11", features = ["blocking"] }
+hyper = { version = "0.14", features = ["full"] }
+tokio = { version = "1.21", features = ["full"] }
 
 [profile.release]
 strip = true
